deploy/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sally
  namespace: sally
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sally
  template:
    metadata:
      labels:
        app: sally
    spec:
      containers:
        - name: sally
          image: rg.fr-par.scw.cloud/pixelfactory/sally:8740dceb9093b7836d10e0d27b0a64457b023e18
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 800m
              memory: 30Mi
            requests:
              memory: 16Mi
---
apiVersion: v1
kind: Service
metadata:
  name: sally-svc
  namespace: sally
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: sally
